# VkPrimer

./: .gitignore  CMakeLists.txt  add.slang  build_shaders.sh  main.cpp  main_rt.cpp  rt2d_triangles.slang  rt_triangles.slang
app/: main.cpp
apps/01_vec_add/: CMakeLists.txt  main.cpp
apps/01_vec_add/shader/: add_10k.slang
apps/02_rt_trianlge/: CMakeLists.txt  main.cpp
apps/02_rt_trianlge/shader/: rt_triangles.slang
apps/03_rt_aabb/shader/: rt_lsi.slang
apps/03_rt_lsi/: CMakeLists.txt  main.cpp
cmake/: CompileSlang.cmake  FindNvproCore2.cmake
shader/: rt2d_triangles.slang
